downward_api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward-env
spec:
  containers:
    - name: downward-container
      image: kklk210/downward_api:latest   # 여기를 본인 DockerHub ID로 수정
      ports:
        - containerPort: 5000
