nginx2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  namespace: test
spec:
  containers:
    - name: nginx
      image: nginx
      command: ["/bin/sh"]
      args: ["-c", "sleep 3600"]
